--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
     "private": true,
     "name": "justdapps",
-    "workspaces": ["packages/*"],
-    "scripts": {}
- }
+    "workspaces": [
+        "packages/*"
+    ],
+    "scripts": {},
+    "devDependencies": {
+        "eslint": "^6.6.0",
+        "eslint-config-airbnb": "^18.0.1",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react": "^7.16.0",
+        "eslint-plugin-react-hooks": "^2.2.0"
+    },
+    "dependencies": {}
+}
