--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -6,10 +6,16 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "passport": "^0.4.0",
+    "passport-google-token": "^0.1.2",
+    "pug": "2.0.0-beta11",
+    "request": "^2.88.0"
   }
 }
