--- a/packages/web-react/package.json
+++ b/packages/web-react/package.json
@@ -6,6 +6,7 @@
     "@justdapps/react-components": "0.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-google-login": "^5.0.7",
     "react-scripts": "3.2.0"
   },
   "scripts": {
