--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -2,5 +2,13 @@
   "name": "@justdapps/react-components",
   "version": "0.1.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
+  },
+  "peerDependencies": {
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
+  }
 }
