--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "rules": {
+        "linebreak-style": "off",
+        "no-use-before-define": "off",
+        "no-unused-vars": ["warn", { "argsIgnorePattern": "next" }]
+    }
 }
