--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -2,7 +2,8 @@
   "name": "@justdapps/api-server",
   "version": "0.1.0",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "@justdapps/data-mongodb": "0.1.0",
@@ -18,5 +19,8 @@
     "passport-google-token": "^0.1.2",
     "pug": "2.0.0-beta11",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
