--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "workspaces": [
         "packages/*"
     ],
-    "scripts": {},
+    "scripts": {
+        "devdb": "node .\\packages\\data-mongodb\\examples\\saveSamples.js"
+    },
     "devDependencies": {
         "eslint": "^6.6.0",
         "eslint-config-airbnb": "^18.0.1",
