--- a/packages/data-mongodb/package.json
+++ b/packages/data-mongodb/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "mongodb-memory-server": "^6.0.1"
   }
 }
