--- a/packages/data-mongodb/package.json
+++ b/packages/data-mongodb/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^5.7.8"
   },
   "devDependencies": {
+    "chai-as-promised": "^7.1.1",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "mongodb-memory-server": "^6.0.1"
