--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "devdb": "node .\\packages\\data-mongodb\\examples\\saveSamples.js"
     },
     "devDependencies": {
+        "chai": "^4.2.0",
+        "chai-as-promised": "^7.1.1",
         "eslint": "^6.6.0",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-plugin-import": "^2.18.2",
