--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -4,11 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
+    "@storybook/addons": "^5.2.6",
+    "babel-loader": "^8.0.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
   "peerDependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
+  },
+  "dependencies": {
+    "@storybook/react": "^5.2.6",
+    "antd": "^3.25.1",
+    "prop-types": "^15.7.2"
+  },
+  "scripts": {
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   }
 }
