--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "chai-http": "^4.3.0",
-    "mongodb-memory-server": "^6.0.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "passport-mock-strategy": "^2.0.0"
   }
 }
