--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "packages/*"
     ],
     "scripts": {
-        "devdb": "node .\\packages\\data-mongodb\\examples\\saveSamples.js"
+        "devdb": "node .\\packages\\data-mongodb\\examples\\saveSamples.js",
+        "test": "yarn workspaces run test"
     },
     "devDependencies": {
         "chai": "^4.2.0",
