--- a/packages/eth-core/package.json
+++ b/packages/eth-core/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "mocha",
-    "devnode": "ganache-cli -i 999 -m occur chimney draft toddler glue typical priority indicate kick manage civil blame"
+    "devnode": "ganache-cli -i 999 -b 1 -m occur chimney draft toddler glue typical priority indicate kick manage civil blame"
   },
   "dependencies": {
     "web3": "^1.2.4"
