--- a/packages/eth-core/package.json
+++ b/packages/eth-core/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "test": "mocha",
-    "devnode": "ganache-cli -i 999 -m occur chimney draft toddler glue typical priority indicate kick manage civil blame"
+    "devnode": "ganache-cli -i 999 -m occur chimney draft toddler glue typical priority indicate kick manage civil blame",
+    "migrate": "cd test && truffle migrate",
+    "preptest": "concurrently \"yarn:devnode\" \"yarn:migrate\""
   },
   "dependencies": {
     "superagent": "^5.1.2",
