--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
         "chai-string": "^1.5.0",
+        "concurrently": "^5.0.1",
         "eslint": "^6.6.0",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-plugin-import": "^2.18.2",
