--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ node_js:
   - "10.15.1"
 
 before_install:
-  - yarn global add mocha
+  - yarn global add mocha truffle ganache-cli
+
+before_script:
+  - yarn preptest:eth
+
 script:
   - yarn test:data
   - yarn test:api
+  - yarn test:eth
