--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@justdapps/data-mongodb": "0.1.0",
+    "@justdapps/eth-core": "0.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
